--- a/libjlm/Makefile.sub
+++ b/libjlm/Makefile.sub
@@ -64,6 +64,7 @@ LIBJLM_SRC = \
     libjlm/src/ir/variable.cpp \
     libjlm/src/ir/hls/hls.cpp \
     \
+    libjlm/src/opt/alias-analyses/AdvancedEncoder.cpp \
     libjlm/src/opt/alias-analyses/BasicEncoder.cpp \
     libjlm/src/opt/alias-analyses/MemoryStateEncoder.cpp \
     libjlm/src/opt/alias-analyses/Operators.cpp \
