--- a/tests/libjlm/opt/alias-analyses/Makefile.sub
+++ b/tests/libjlm/opt/alias-analyses/Makefile.sub
@@ -1,3 +1,4 @@
 TESTS += \
+    libjlm/opt/alias-analyses/TestAdvancedEncoder \
 	libjlm/opt/alias-analyses/TestBasicEncoder \
 	libjlm/opt/alias-analyses/TestSteensgaard \
